--- a/polyglot/custservice/app/views/customers/index.html.erb
+++ b/polyglot/custservice/app/views/customers/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Id</th>
     <th>First name</th>
     <th>Last name</th>
     <th>Street address</th>
@@ -17,6 +18,7 @@
 
 <% @customers.each do |customer| %>
   <tr>
+    <td><%= customer.id %></td>
     <td><%= customer.first_name %></td>
     <td><%= customer.last_name %></td>
     <td><%= customer.street_address %></td>
