--- a/polyglot/custservice/app/views/customers/show.html.erb
+++ b/polyglot/custservice/app/views/customers/show.html.erb
@@ -1,6 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Id:</b>
+  <%= @customer.id %>
+</p>
+
+<p>
+  <b>Customer:</b>
+  <%= @customer.customer_id %>
+</p>
+
+<p>
   <b>First name:</b>
   <%= @customer.first_name %>
 </p>
