--- a/polyglot/custservice/app/views/customers/_form.html.erb
+++ b/polyglot/custservice/app/views/customers/_form.html.erb
@@ -12,6 +12,14 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :id %><br />
+    <%= f.text_field :id %>
+  </div>
+  <div class="field">
+    <%= f.label :customer_id %><br />
+    <%= f.text_field :customer_id %>
+  </div>
+  <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
   </div>
